# aoc

./: adventOfCode2021.cabal  adventOfCode2022.cabal  adventOfCode2023.cabal  flake.nix  hie.yaml  package.yaml  run.sh  shell.nix  stack.yaml
02/: 02.hy  part2.hy
2020/day01/part1/: README.md
2020/day01/part1/src/day01/: core.clj
2020/day01/part2/: project.clj
2020/day01/part2/src/part2/: core.clj
2020/day03/part1/: README.md  project.clj
2020/day05/: README.md
2020/day05/src/day05/: core.clj
2020/day06/: README.md  testInput.txt
2020/day08/: input.txt
2020/day08/src/day08/: core.clj
2021/: README.md  adventOfCode2021.cabal  default.nix  hie.yaml  release.nix
2021/src/: Solution1.hs  Solution2.hs  Solution3.hs  Solution4.hs  Solution6.hs  Solution7.hs
2022/: .gitignore  CHANGELOG.md
2022/app/: Lib.hs  Main.hs
2022/app/Lib/: Parsing.hs
2022/app/Solutions/: Solution01.hs  Solution02.hs  Solution04.hs  Solution05.hs  Solution06.hs  Solution07.hs  Solution08.hs
2023/: adventOfCode2023.cabal  package.yaml
2023/app/Days/: Day1.hs  Day2.hs  Day5.hs
2023/src/: Lib.hs
2024/: x2024.cabal
2024/app/: Main.hs  Util.hs
2024/app/Days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs
app/: Lib.hs  Main.hs
app/Days/: Day3.hs  Day4.hs
app/Lib/: Parsing.hs
app/Solutions/: Solution01.hs  Solution02.hs  Solution03.hs  Solution04.hs  Solution05.hs  Solution06.hs  Solution08.hs
day01/part2/: CHANGELOG.md  README.md
day03/part1/: CHANGELOG.md
day03/part1/src/part1/: core.clj
day04/src/day04/: core.clj
day05/src/day05/: core.clj
day06/src/day06/: core.clj
day07/: README.md
day07/src/day7/: core.clj
day08/: README.md
day08/src/day08/: core.clj
src/: Lib.hs  Main.hs  Solution1.hs  Solution10.hs  Solution11.hs  Solution12.hs  Solution13.hs  Solution14.hs  Solution15.hs  Solution16.hs  Solution17.hs  Solution18.hs  Solution19.hs  Solution2.hs  Solution20.hs  Solution3.hs  Solution4.hs  Solution5.hs  Solution6.hs  Solution7.hs  Solution8.hs  Solution9.hs  Solutions.hs
