cabal-version: 1.12

name:           adventOfCode2021
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/adventOfCode2021#readme>
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/TotNotTac/AoC2021

executable adventOfCode2021-exe
  main-is: Main.hs

  default-language: Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

  default-extensions:
    LambdaCase
    OverloadedStrings
    BlockArguments

  other-modules:
      Lib
      Solution1
      Solution2

  hs-source-dirs:
      src

  build-depends:
    base >=4.7 && <5
    , directory
    , mtl
