cabal-version:      3.0
name:               x2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Silas de Jong
maintainer:         silas.de.jong@cobase.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable x2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    Days.Day01
                    , Days.Day02
                    , Days.Day03
                    , Days.Day04
                    , Util
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , containers
                    , vector
                    , split
                    , megaparsec
                    , text
                    , regex-tdfa
    hs-source-dirs:   app
    default-language: Haskell2010
